some more changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="card">
-      <img src="images/bg-pattern-card.svg" alt="" class="card__upper" />
+      <img src="images/bg-pattern-card.svg" alt="" />
       <div class="card__mid">
         <img src="images/image-victor.jpg" alt="" class="card__avatar" />
         <h1>Victor Crest<span> 26 </span></h1>
